--- a/index.css
+++ b/index.css
@@ -1,31 +1,67 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;  
+}
+
+.container {
+    width: 100%;
+    max-width: 100rem;
+    margin: 0 auto;
+}
+
+h1 {
+    margin: 1rem 0 2rem 0;
+}
+
 #pokelist {
     display: grid;
-    grid-template-columns: repeat(14, 1fr);
+    grid-template-columns: repeat(10, 1fr);
     gap: 10px;
     width: 100%;
 
 }
 
 .pokecard {
-    background-color: grey;
+    background-color: rgb(245, 243, 243);
     display: block;
     width: 100%;
     height: 100%;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     text-decoration: none;
     color: black;
     position: relative;
-    border-radius: 2px;
+    border-radius: 6px;
+    padding: 10px 5px;
+    border: 3px solid #e7c52d;
 
     img {
         margin-top: 25px;
         width: 100%;
+        padding: 5px;
     }
 
     .index {
         position: absolute;
         top: 5px;
         left: 5px;
+        font-size: 0.6rem;
+        color: #202020
+    }
+
+    p {  
+        width: fit-content;
+        font-size: 0.8rem;
+        text-transform: capitalize;
     }
 
 }
