--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ h1 {
     position: relative;
     border-radius: 6px;
     padding: 10px 5px;
-    border: 3px solid #e7c52d;
+    border: 3px solid #c9b55f;
 
     img {
         margin-top: 25px;
@@ -64,4 +64,9 @@ h1 {
         text-transform: capitalize;
     }
 
+}
+
+.pokecard:hover {
+    background-color: #e8f2f5;
+    border: 3px solid #203de0;
 }
