css og fetch update fn

--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@
 body {
     font-family: "Press Start 2P", system-ui;
     font-weight: 400;
-    font-style: normal;  
+    font-style: normal;
+    background-color: #08549b;
 }
 
 .container {
@@ -18,6 +19,7 @@ body {
 
 h1 {
     margin: 1rem 0 2rem 0;
+    color: white;
 }
 
 #pokelist {
@@ -42,12 +44,15 @@ h1 {
     position: relative;
     border-radius: 6px;
     padding: 10px 5px;
-    border: 3px solid #c9b55f;
+    border: 3px solid #beab56;
+    transition: border 0.35s ease;
 
     img {
         margin-top: 25px;
         width: 100%;
         padding: 5px;
+        opacity: 0.85;
+        filter: grayscale(0.15);
     }
 
     .index {
@@ -68,5 +73,10 @@ h1 {
 
 .pokecard:hover {
     background-color: #e8f2f5;
-    border: 3px solid #203de0;
+    border: 3px solid #ffd000;
+
+    img {
+        opacity: 1;
+        filter: grayscale(0);
+    }
 }
