--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url(./details.css);
+
 * {
     padding: 0;
     margin: 0;
@@ -63,7 +65,7 @@ h1 {
         color: #202020
     }
 
-    p {  
+    p {
         width: fit-content;
         font-size: 0.8rem;
         text-transform: capitalize;
