--- a/details.css
+++ b/details.css
@@ -23,13 +23,12 @@
 
 #allWrapper {
     width: 80%;
-    display: flex;
-    justify-content: space-between;
     position: relative;
     margin: 0 auto;
+    background-color: aqua;
 }
 
-.container {
+.main-container {
     width: 50%;
     position: absolute;
     top: 5%;
@@ -62,7 +61,7 @@
 
     width: 400px;
     height: 600px;
-    opacity: 0.5;
+    opacity: 0.8;
 
     background-color: rgba(128, 0, 128, 0.262);
     border: 1px solid grey;
@@ -137,12 +136,11 @@
     height: 400px;
     position: absolute;
     opacity: 1;
-    transition: opacity 2s all;
+    transition: opacity 0.5s ease, box-shadow 0.5s ease;
 }
 
 #image1:hover {
     opacity: 0;
-    transition: opacity 2s all;
 }
 
 .stat-container {
@@ -156,9 +154,10 @@
 .stats {
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: 85%;
     gap: 1rem;
     margin: 0 auto;
+    color: white;
 
     div {
         display: flex;
@@ -191,4 +190,49 @@
 
 .hidden {
     display: none;
+}
+
+.type {
+    width: 50%;
+    position: absolute;
+    top: 670px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+
+    background-color: rgb(41, 62, 167);
+    border: 1px solid rgba(128, 128, 128, 0.367);
+    border-radius: 8px;
+    box-shadow: 3px 3px 9px rgba(45, 45, 45, 0.508);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding: 10px;
+
+    img {
+        width: 100%;
+        max-width: 50px;
+    }
+}
+
+.audio {
+    width: 50%;
+    position: absolute;
+    top: 755px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+
+    background-color: rgb(41, 62, 167);
+    border: 1px solid rgba(128, 128, 128, 0.367);
+    border-radius: 8px;
+    box-shadow: 3px 3px 9px rgba(45, 45, 45, 0.508);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding: 10px;
 }
