--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url(./details.css);
+@import url(./loader.css);
 
 * {
     padding: 0;
@@ -13,6 +14,11 @@ body {
     background-color: #08549b;
     position: relative;
     min-height: 200vh;
+    background-image: url(./assets/ruby_bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 
 }
 
@@ -22,9 +28,24 @@ header {
 
 main {
     width: 100%;
+    max-width: 85rem;
     position: relative;
+    margin: 0 auto;
+    padding-bottom: 4rem;
+
+    @media (max-width: 1400px) {
+        width: 90%;
+    }
+
+
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+
 
 }
+
 
 
 h1 {
@@ -33,14 +54,42 @@ h1 {
 }
 
 #pokelist {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    margin: 0 auto;
+
     gap: 10px;
-    /* display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    gap: 10px; */
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    width: fit-content;
+
+    @media (max-width: 1440px) {
+        grid-template-columns: repeat(7, 1fr);
+
+    }
+
+    @media (max-width: 1320px) {
+        grid-template-columns: repeat(6, 1fr);
+
+    }
+
+    @media (max-width: 1140px) {
+        grid-template-columns: repeat(5, 1fr);
+
+    }
+
+    @media (max-width: 970px) {
+        grid-template-columns: repeat(4, 1fr);
+
+    }
+
+    @media (max-width: 740px) {
+        grid-template-columns: repeat(3, 1fr);
+
+    }
+
+    @media (max-width: 580px) {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
 
 }
 
@@ -60,12 +109,13 @@ h1 {
     padding: 10px 5px;
     border: 3px solid #beab56;
     transition: border 0.35s ease;
+    transition: transform 0.4s ease-in;
 
     img {
         margin-top: 25px;
         width: 100%;
         padding: 5px;
-        opacity: 0.85;
+        opacity: 0.65;
         filter: grayscale(0.15);
     }
 
@@ -88,9 +138,30 @@ h1 {
 .pokecard:hover {
     background-color: #e8f2f5;
     border: 3px solid #ffd000;
+    transition: transform 0.15s ease-in;
+    transform: scale(1.05);
+
 
     img {
         opacity: 1;
         filter: grayscale(0);
     }
+}
+
+#search {
+    font-size: 12px;
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+
+    width: 500px;
+    height: 50px;
+    border: 3px solid #beab56;
+    border-radius: 30px;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+
+    align-self: center;
+    justify-self: center;
+    padding: 3px 10px;
+   
 }
