--- a/details.css
+++ b/details.css
@@ -87,15 +87,15 @@
     img {
         width: 100%;
         max-width: 90%;
-        filter: brightness(0) contrast(100%) grayscale(100) blur(3px);
+        filter: brightness(0) contrast(100%) grayscale(100) blur();
         user-select: none;
     }
 
     .fake-text {
         width: 60%;
         height: 1px;
-        border: 2px solid black;
-        filter: blur(2px);
+        border: 3px solid black;
+        /* filter: blur(2px); */
         background: transparent;
     }
 
@@ -192,13 +192,26 @@
     display: none;
 }
 
-.type {
+
+#type-tainer {
     width: 50%;
     position: absolute;
     top: 670px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
+
+    p {
+        position: absolute;
+        top: 40%;
+        left: 10%;
+        color: white;
+    }
+
+}
+
+.type {
+
 
     background-color: rgb(41, 62, 167);
     border: 1px solid rgba(128, 128, 128, 0.367);
@@ -235,4 +248,290 @@
     justify-content: center;
     gap: 2rem;
     padding: 10px;
+}
+
+audio::-webkit-media-controls-panel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+audio::-webkit-media-controls-timeline,
+audio::-webkit-media-controls-current-time-display,
+audio::-webkit-media-controls-time-remaining-display,
+audio::-webkit-media-controls-rewind-button,
+audio::-webkit-media-controls-fast-forward-button {
+    display: none !important;
+}
+
+#abilities {
+    width: 50%;
+    height: 90px;
+    position: absolute;
+    top: 825px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+
+    background-color: rgb(41, 62, 167);
+    border: 1px solid rgba(128, 128, 128, 0.367);
+    border-radius: 8px;
+    box-shadow: 3px 3px 9px rgba(45, 45, 45, 0.508);
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 10px;
+    padding: 10px;
+
+    span {
+        color: yellow;
+    }
+
+    p {
+        color: white;
+        text-transform: uppercase;
+    }
+
+}
+
+
+#locations {
+    width: 50%;
+    position: absolute;
+    top: 925px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    background-color: rgb(20, 169, 9);
+
+
+    >div {
+        display: flex;
+
+
+        >div {
+            display: grid;
+            place-items: center;
+
+            width: 30px;
+            height: 30px;
+            background-color: transparent;
+            /* border: 1px solid white; */
+            font-size: 12px;
+
+            position: relative;
+        }
+    }
+
+    .a-12,
+    .a-13,
+    .a-14,
+    .b-12,
+    .c-1,
+    .c-6,
+    .c-7,
+    .c-8,
+    .c-8,
+    .c-9,
+    .c-10,
+    .c-11,
+    .c-12,
+    .c-13,
+    .c-14,
+    .c-15,
+    .c-16,
+    .d-1,
+    .d-3,
+    .d-4,
+    .d-5,
+    .d-6,
+    .d-12,
+    .d-16,
+    .e-1,
+    .e-3,
+    .e-12,
+    .e-16,
+    .f-1,
+    .f-3,
+    .f-5,
+    .f-6,
+    .f-7,
+    .f-8,
+    .f-9,
+    .f-10,
+    .f-11,
+    .f-12,
+    .f-13,
+    .f-14,
+    .f-15,
+    .f-16,
+    .g-1,
+    .g-3,
+    .g-5,
+    .g-12,
+    .g-16,
+    .h-1,
+    .h-3,
+    .h-5,
+    .h-12,
+    .h-16,
+    .i-1,
+    .i-2,
+    .i-3,
+    .i-5,
+    .i-12,
+    .i-16,
+    .j-3,
+    .j-5,
+    .j-12,
+    .j-13,
+    .j-14,
+    .j-15,
+    .j-16,
+    .k-3,
+    .k-5,
+    .k-16,
+    .l-3,
+    .l-13,
+    .l-14,
+    .l-15,
+    .l-16,
+    .m-3,
+    .m-13,
+    .n-8,
+    .n-9,
+    .n-10,
+    .n-11,
+    .n-12,
+    .n-13,
+    .o-10,
+    .p-3 {
+        background-color: rgb(204, 170, 252);
+    }
+
+    /* seaways */
+    .l-5,
+    .k-5,
+    .m-5,
+    .n-5,
+    .n-6,
+    .n-7,
+    .n-3,
+    .o-3,
+    .p-4,
+    .p-5,
+    .p-7,
+    .p-8,
+    .p-9,
+    .p-10 {
+        background-color: rgb(57, 150, 182);
+        border: none;
+        color: white;
+        position: relative;
+        z-index: -2;
+    }
+
+    .l-5:before,
+    .k-5:before,
+    .m-5:before,
+    .n-5:before,
+    .n-6:before,
+    .n-7:before,
+    .n-3:before,
+    .o-3:before,
+    .p-4:before,
+    .p-5:before,
+    .p-7:before,
+    .p-8:before,
+    .p-9:before,
+    .p-10:before {
+        position: absolute;
+        background-color: black;
+        border-radius: 99%;
+        height: 50%;
+        width: 50%;
+        content: "";
+        z-index: -1;
+
+    }
+
+    /* CITIES */
+    .c-12,
+    .f-12,
+    .f-9,
+    .f-12,
+    .f-16,
+    .j-12,
+    .n-10,
+    .d-3,
+    .i-3,
+    .l-3,
+    .c-1,
+    .p-3 {
+        background-color: rgb(103, 42, 235);
+        border: 2px solid white;
+    }
+
+    /* forests */
+
+    .f-3 {
+        background-color: rgb(27, 214, 149);
+        border: 2px solid white;
+
+    }
+
+    /* caves */
+    .d-1,
+    .c-7,
+    .c-16 {
+        background-color: rgb(176, 156, 125);
+        border: 2px solid white;
+
+
+    }
+
+    /* island */
+
+    .p-6 {
+        background-color: rgb(62, 126, 255);
+        border: 2px solid white;
+
+
+    }
+
+
+    .targetAquired {
+
+        border: 5px dashed rgb(208, 0, 111);
+
+    }
+
+    .targetLegendary {
+
+        border: 5px dashed rgb(214, 172, 0);
+
+    }
+
+    .mt-moon {
+        position: relative;
+
+        &:after {
+            position: absolute;
+            top: -20px;
+            background-color: black;
+            content: "Mt.Moon";
+            color: white;
+            display: none;
+        }
+    }
+
+    .mt-moon:hover {
+        &:after {
+            display: block;
+
+        }
+    }
 }
