--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
     font-style: normal;
     background-color: #08549b;
     position: relative;
-    min-height: 200vh;
+    min-height: 110vh;
     background-image: url(./assets/ruby_bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -23,7 +23,33 @@ body {
 }
 
 header {
+    width: 100%;
     height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+
+
+
+    .regions {
+        width: 300px;
+        padding: 5px 10px;
+
+        background-color: white;
+        border: 2px solid #ffd000;
+        border-radius: 50px;
+
+        text-align: center;
+        text-decoration: none;
+        color: black;
+    }
+
+    .active {
+        background-color: rgb(180, 180, 180);
+        border: 2px solid #f0c400;
+
+    }
 }
 
 main {
@@ -37,13 +63,21 @@ main {
         width: 90%;
     }
 
-
     .container {
         display: flex;
         flex-direction: column;
     }
+}
 
+footer {
+    width: 100%;
+    height: 100px;
 
+    .foot-tainer {
+        width: 100%;
+        display: grid;
+        place-items: center;
+    }
 }
 
 
@@ -138,8 +172,6 @@ h1 {
 .pokecard:hover {
     background-color: #e8f2f5;
     border: 3px solid #ffd000;
-    transition: transform 0.15s ease-in;
-    transform: scale(1.05);
 
 
     img {
@@ -163,5 +195,5 @@ h1 {
     align-self: center;
     justify-self: center;
     padding: 3px 10px;
-   
+
 }
