--- a/details.css
+++ b/details.css
@@ -4,10 +4,20 @@
     top: 300px;
 }
 
+.goHome {
+    position: fixed;
+    left: 10px;
+    top: 10px;
+    color: white;
+    text-decoration: none;
+    font-size: 24px;
+}
+
 #previous {
     position: fixed;
     left: 10px;
     top: 300px;
+
 }
 
 .leftPointer,
@@ -22,19 +32,17 @@
 
 
 #allWrapper {
-    width: 80%;
+    width: 50%;
     position: relative;
     margin: 0 auto;
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .main-container {
-    width: 50%;
-    position: absolute;
-    top: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
+    width: 100%;
+    margin: 0 auto;
 
     background-color: rgb(41, 62, 167);
     border: 1px solid rgba(128, 128, 128, 0.367);
@@ -43,6 +51,7 @@
 
     display: flex;
     flex-direction: column;
+
 
 
     .poketitle {
@@ -105,12 +114,15 @@
     position: fixed;
     top: 6%;
     left: 9%;
+    z-index: -2;
 }
 
 #stopNext {
     position: fixed;
     top: 6%;
     right: 9%;
+    z-index: -2;
+
 }
 
 #pokedetails {
@@ -146,7 +158,9 @@
 .stat-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
     gap: 1rem;
 
 }
@@ -154,7 +168,7 @@
 .stats {
     display: flex;
     flex-direction: row;
-    width: 85%;
+    width: 100%;
     gap: 1rem;
     margin: 0 auto;
     color: white;
@@ -166,6 +180,11 @@
 
 
     }
+
+    >span {
+        width: 115px;
+    }
+
 }
 
 .statbar {
@@ -194,11 +213,10 @@
 
 
 #type-tainer {
-    width: 50%;
-    position: absolute;
-    top: 670px;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 100%;
+    position: relative;
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
     z-index: 2;
 
     p {
@@ -211,8 +229,6 @@
 }
 
 .type {
-
-
     background-color: rgb(41, 62, 167);
     border: 1px solid rgba(128, 128, 128, 0.367);
     border-radius: 8px;
@@ -231,11 +247,7 @@
 }
 
 .audio {
-    width: 50%;
-    position: absolute;
-    top: 755px;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 100%;
     z-index: 2;
 
     background-color: rgb(41, 62, 167);
@@ -266,13 +278,8 @@ audio::-webkit-media-controls-fast-forward-button {
 }
 
 #abilities {
-    width: 50%;
+    width: 100%;
     height: 90px;
-    position: absolute;
-    top: 825px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
 
     background-color: rgb(41, 62, 167);
     border: 1px solid rgba(128, 128, 128, 0.367);
@@ -299,18 +306,18 @@ audio::-webkit-media-controls-fast-forward-button {
 
 
 #locations {
-    width: 50%;
-    position: absolute;
-    top: 925px;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 100%;
     z-index: 2;
-    background-color: rgb(20, 169, 9);
+    background-color: rgba(15, 15, 15, 0.396);
+    border: 5px solid black;
+    backdrop-filter: blur(3px);
+    display: grid;
+    place-items: center;
+    padding: 25px;
 
 
     >div {
         display: flex;
-
 
         >div {
             display: grid;
@@ -319,7 +326,6 @@ audio::-webkit-media-controls-fast-forward-button {
             width: 30px;
             height: 30px;
             background-color: transparent;
-            /* border: 1px solid white; */
             font-size: 12px;
 
             position: relative;
@@ -409,7 +415,7 @@ audio::-webkit-media-controls-fast-forward-button {
     .n-13,
     .o-10,
     .p-3 {
-        background-color: rgb(204, 170, 252);
+        background-color: rgb(235, 221, 181);
     }
 
     /* seaways */
@@ -427,7 +433,7 @@ audio::-webkit-media-controls-fast-forward-button {
     .p-8,
     .p-9,
     .p-10 {
-        background-color: rgb(57, 150, 182);
+        background-color: aqua;
         border: none;
         color: white;
         position: relative;
@@ -471,7 +477,7 @@ audio::-webkit-media-controls-fast-forward-button {
     .l-3,
     .c-1,
     .p-3 {
-        background-color: rgb(103, 42, 235);
+        background-color: rgb(231, 134, 134);
         border: 2px solid white;
     }
 
@@ -496,7 +502,7 @@ audio::-webkit-media-controls-fast-forward-button {
     /* island */
 
     .p-6 {
-        background-color: rgb(62, 126, 255);
+        background-color: rgb(28, 50, 95);
         border: 2px solid white;
 
 
@@ -505,13 +511,13 @@ audio::-webkit-media-controls-fast-forward-button {
 
     .targetAquired {
 
-        border: 5px dashed rgb(208, 0, 111);
+        border: 5px dashed rgb(212, 28, 28);
 
     }
 
     .targetLegendary {
 
-        border: 5px dashed rgb(214, 172, 0);
+        border: 5px dashed rgb(255, 17, 227);
 
     }
 
