--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    position: relative;
 
 }
 
