--- a/index.css
+++ b/index.css
@@ -1,10 +1,15 @@
+
+
 @import url(./details.css);
 @import url(./loader.css);
+
+
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Press Start 2P", system-ui;
 }
 
 body {
