--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-
-
 @import url(./details.css);
 @import url(./loader.css);
 
@@ -18,7 +16,7 @@ body {
     font-style: normal;
     background-color: #08549b;
     position: relative;
-    min-height: 110vh;
+    min-height: 100vh;
     background-image: url(./assets/ruby_bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -32,9 +30,16 @@ header {
     width: 100%;
     height: 100px;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 3rem;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 1rem;
+
+    }
 
 
 
@@ -80,9 +85,13 @@ footer {
     height: 100px;
 
     .foot-tainer {
-        width: 100%;
-        display: grid;
-        place-items: center;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    p {
+        text-align: center;
+        text-wrap: pretty;
     }
 }
 
